--- a/pom.xml
+++ b/pom.xml
@@ -24,9 +24,13 @@
 		<dependency>
 			<groupId>org.springframework.kafka</groupId>
 			<artifactId>spring-kafka</artifactId>
-			<version>3.1.4</version> <!-- Use the appropriate version -->
+			<version>2.9.11</version> <!-- Use the appropriate version -->
 		</dependency>
-
+		<dependency>
+			<groupId>com.sun.mail</groupId>
+			<artifactId>javax.mail</artifactId>
+			<version>1.5.5</version>
+		</dependency>
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
